# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze_output.txt  pyproject.toml
src/: __init__.py  config_parser.py  display.py  maze.py  output_writer.py  solver.py
tests/: test_maze.py
