[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "amazeing"
version = "1.0.0"
description = "A maze generator and solver"
requires-python = ">=3.10"

[project.scripts]
amazeing = "a_maze_ing:main"

[tool.setuptools]
py-modules = ["a_maze_ing"]
packages = ["src"]