[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator and solver"
requires-python = ">=3.10"

[project.scripts]
mazegen = "a_maze_ing:main"

[tool.setuptools]
py-modules = ["a_maze_ing"]
packages = ["src"]